[ref: #112] Fix spacing for lists

--- a/src/core/styles/_lists.scss
+++ b/src/core/styles/_lists.scss
@@ -2,9 +2,7 @@
 // Lists
 // =============================================================================
 
-ul, ol {
-  ul, ol { padding-left: 1.5em; }
-}
+ul, ol { padding-left: 1.5em; }
 
 //
 // Definition Lists
